# social-index-nb

./: .gitignore  LICENSE  README.md  oss_app.py  pyproject.toml  requirements.txt
oss_app/: dataset.py  oss_func_simple.py  plotting.py  utils.py
