[project]
name = "oss-si-simple-rework"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4 ; sys_platform == 'darwin'",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arro3-core==0.5.1",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "docutils==0.21.2",
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "fonttools==4.58.2",
    "fqdn==1.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.37.0 ; python_full_version < '3.11'",
    "ipython==9.3.0 ; python_full_version >= '3.11'",
    "ipython-pygments-lexers==1.1.1 ; python_full_version >= '3.11'",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.8",
    "loguru==0.7.3",
    "loro==1.5.1 ; python_full_version >= '3.11'",
    "marimo>=0.13.15",
    "markdown==3.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mypy-extensions==1.1.0",
    "narwhals==1.42.1",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.3",
    "notebook-shim==0.2.4",
    "numpy==2.2.6 ; python_full_version < '3.11'",
    "numpy==2.3.0 ; python_full_version >= '3.11'",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "pandas-flavor==0.7.0",
    "pandera==0.24.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow==11.2.1",
    "pingouin==0.5.5",
    "platformdirs==4.3.8",
    "plotly==6.2.0",
    "polars==1.30.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0 ; os_name != 'nt' or (sys_platform != 'emscripten' and sys_platform != 'win32')",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "pymdown-extensions==10.15",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pywin32==310 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'",
    "pywinpty==2.0.15 ; os_name == 'nt'",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.25.1",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "starlette==0.47.0",
    "statsmodels==0.14.4",
    "tabulate==0.9.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "tomlkit==0.13.3",
    "tornado==6.5.1",
    "traitlets==5.14.3",
    "typeguard==4.4.3",
    "types-python-dateutil==2.9.0.20250516",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
    "vega-datasets==0.9.0",
    "vegafusion==2.0.2",
    "vl-convert-python==1.8.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "widgetsnbextension==4.0.14",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
    "xarray==2025.6.1",
]
